--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div>
       <div class="input-dates">
-        <button id="btn-dates" onclick="getRange(document.getElementById('since').value)">Autres <img src="61444.png"></button>
+        <button id="btn-dates" onclick="getRange()">Autres <img src="61444.png"></button>
         <input id="since" type="date" placeholder="date" name="since">
       </div>
     </div>
